# sphinx-sitemap

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .vale.ini  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  MAINTENANCE.md  README.md  README.rst  pyproject.toml  readthedocs.yml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: continuous-integration.yml
docs/: .vale.ini  Makefile  advanced-configuration.rst  changelog.rst  conf.py  config-values.rst  configuration-values.rst  configuration.rst  contributing.rst  getting-started.rst  index.rst  requirements.txt  search-engine-optimization.rst  search-optimization.rst  seo.rst
docs/_styles/custom/: Spelling.yml
docs/_vale/: ignore_words.txt
docs/source/: advanced-configuration.rst  conf.py  configuration-values.rst  contributing.rst  getting-started.rst  index.rst  search-optimization.rst
sphinx_sitemap/: __init__.py  version.py
tests/: conftest.py  test_parallel_mode.py  test_simple.py
tests/roots/test-root/: bar.rst  conf.py  dolor.rst  elitr.rst  foo.rst  ipsum.rst  lorem.rst
tests/roots/test-simple/: index.rst
