[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-sitemap"
description = "Sitemap generator for Sphinx"
authors = [
    {name = "Jared Dillard", email = "jared.dillard@gmail.com"},
]
maintainers = [
    {name = "Jared Dillard", email = "jared.dillard@gmail.com"},
]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation :: Sphinx",
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.rst"
dependencies = [
    "requests>=2.28.1",
    "flask>=2.0.0",
    "sphinx-last-updated-by-git",
]
dynamic = [
    "optional-dependencies",
    "version",
]

[project.urls]
documentation = "https://sphinx-sitemap.readthedocs.io/en/latest/index.html"
download = "https://pypi.org/project/sphinx-sitemap/"
source = "https://github.com/jdillard/sphinx-sitemap"
changelog = "https://github.com/jdillard/sphinx-sitemap/blob/master/CHANGELOG.rst"

[tool.setuptools.dynamic]
optional-dependencies = {dev = { file = ["requirements_dev.txt"] }}
version = {attr = "sphinx_sitemap.__version__"}

[tool.isort]
profile = "black"
